--- a/SchoolRegister.Web/Views/_ViewImports.cshtml
+++ b/SchoolRegister.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SchoolRegister.Web
-@using SchoolRegister.Web.Models
+@using SchoolRegister.ViewModels.VM
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+
