--- a/SchoolRegister.Web/Views/Shared/Error.cshtml
+++ b/SchoolRegister.Web/Views/Shared/Error.cshtml
@@ -1,5 +1,4 @@
-﻿@using SchoolRegister.Web
-@using SchoolRegister.ViewModels.VM
+﻿@using SchoolRegister.ViewModels.VM
 @model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
